--- a/filter-basic/filter-basic.csproj
+++ b/filter-basic/filter-basic.csproj
@@ -9,4 +9,14 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Common\" />
+      <Folder Include="Models\" />
+      <Folder Include="Windows\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="System.Drawing.Common" Version="9.0.0-preview.7.24405.4" />
+    </ItemGroup>
+
 </Project>
